--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
         <img class="collage" src="imagenes/banner-collage.jpg" alt="collage">
 
-        <div class="contenedor-destacados">
+        <div>
 
             <section class="contenedor-seccion">
 
@@ -67,7 +67,7 @@
                         <h3> Paila Marina</h3>
                         <p> Disfruta de un clásico de la comida Chilena.
                         </p>
-                        <a class="botonmas" href=""> ver mas </a>
+                        <a class="botonmas" href=""> Ver más </a>
                     </div>
                 </article>
 
@@ -75,10 +75,10 @@
                     <div class="portadas">
                         <img class="imgportada" src="imagenes/helado.jpg" alt="helado casero">
                         <h3> Helado Casero</h3>
-                        <P> Disfruta de un rico helado hecho por ti mismo.
+                        <P> Un rico helado hecho por ti mismo.
 
                         </P>
-                        <a class="botonmas" href=""> ver mas </a>
+                        <a class="botonmas" href=""> Ver más </a>
                     </div>
                 </article>
 
@@ -88,7 +88,7 @@
                         <h3> Pan Amasado </h3>
                         <p> Hacer tu propio pan es algo mágico.
                         </p>
-                        <a class="botonmas" href=""> ver mas </a>
+                        <a class="botonmas" href=""> Ver más </a>
                     </div>
                 </article>
 
