--- a/paginas/blog.html
+++ b/paginas/blog.html
@@ -67,7 +67,7 @@
                 </p>
             </div>
 
-            <div class="especias">
+            <div class="especias-blog">
                 <p class="texto-especias"><span class="negrita">Comino:</span>
                     Originario de la región mediterránea.
                     Lugar de origen: Región mediterránea.
@@ -83,7 +83,7 @@
                     Recetas sugeridas: Ideal para carnes asadas, aves, marinadas, panes y platos de verduras.</p>
             </div>
 
-            <div class="especias">
+            <div class="especias-blog">
                 <p class="texto-especias"><span class="negrita">Canela:</span>
                     Originaria de Sri Lanka.
                     País de origen: Sri Lanka.
@@ -100,7 +100,7 @@
                     y platos de verduras.
             </div>
 
-            <div class="especias">
+            <div class="especias-blog">
                 <p class="texto-especias"><span class="negrita">Cardamomo:</span>
                     Originario de la India.
                     País de origen: India.
@@ -117,7 +117,7 @@
                     salsas.</p>
             </div>
 
-            <div class="especias">
+            <div class="especias-blog">
                 <p class="texto-especias"><span class="negrita">Clavo de olor:</span>
                     Originario de las Islas Molucas.
                     País de origen: Islas Molucas (Indonesia).
@@ -134,7 +134,7 @@
                     Recetas sugeridas: Se utiliza en platos de cocina china, postres, bebidas y adobos.</p>
             </div>
 
-            <div class="especias">
+            <div class="especias-blog">
                 <p class="texto-especias"><span class="negrita">Tomillo:</span>
                     Originario de la región mediterránea.
                     Lugar de origen: Región mediterránea.
