--- a/paginas/recetas.html
+++ b/paginas/recetas.html
@@ -66,7 +66,7 @@
 
                     <p class="descripcion-collage"> Disfruta de una gran variedad de platos
                     </p>
-                    <a class="bonton-mas" href=""> Ver más </a>
+                    <a class="bonton-mas" href="almuerzos.html"> Ver más </a>
                 </div>
             </article>
 
