arreglo pan amasado

--- a/paginas/pan-amasado.html
+++ b/paginas/pan-amasado.html
@@ -86,9 +86,10 @@
           <li>Disuelve la levadura con el azúcar en un poco de agua tibia y deja reposar 10 minutos.</li>
           <li>En un bol grande mezcla la harina con la sal. Agrega la levadura activada y la manteca.</li>
           <li>Incorpora el agua poco a poco y comienza a amasar hasta lograr una masa suave y elástica.</li>
-          <li>Deja reposar la masa tapada por 1 hora en un lugar cálido.</li>
+          <li>Deja reposar la masa tapada por 1 hora en un lugar cálido o hasta que doble su tamaño.</li>
           <li>Forma bollos o panes individuales, aplánalos un poco y pincha con tenedor.</li>
-          <li>Hornea a 200°C por 20 a 25 minutos, hasta que estén dorados.</li>
+          <li>Hornea a 200°C por 35 a 40 minutos, hasta que estén dorados.
+            (depende mucho de cada horno el tiempo de coccion, no hay que confiarse)</li>
         </ol>
 
         <h2>Video paso a paso:</h2>
