receta pastel de choclo

--- a/paginas/almuerzos.html
+++ b/paginas/almuerzos.html
@@ -73,7 +73,7 @@
                             alt="pastel de pastel-de-choclo">
                         <h3>Pastel de Choclo </h3>
 
-                        <a class="botonmas" href=""> Ver más </a>
+                        <a class="botonmas" href="pastel-de-choclo.html"> Ver más </a>
                     </div>
                 </article>
 
