receta aji de gallina

--- a/paginas/almuerzos.html
+++ b/paginas/almuerzos.html
@@ -82,7 +82,7 @@
                         <img class="imagen-recetas-web" src="../imagenes/aji-de-gallina.jpg" alt="lomo saltado">
                         <h3>Ají de Gallina </h3>
                        
-                        <a class="botonmas" href=""> Ver más </a>
+                        <a class="botonmas" href="aji-de-gallina.html"> Ver más </a>
                     </div>
                 </article>
 
